<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient_registration">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/patient_registration"
            android:textColor="#4A86E8"
            android:textSize="22sp"
         android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/patient_s_name"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/patient_name"
                android:inputType="text"
                android:padding="12dp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <!-- Increased text size to 24sp -->


        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/age"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:padding="12dp"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <!-- Increased text size to 24sp -->

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/patient_adresse"
            android:layout_marginLeft="16dp"
            android:textSize="19sp"
            android:layout_marginStart="16dp" /> <!-- Increased text size to 24sp -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/patient_adresse"
                android:inputType="text"
                android:padding="12dp"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:text="@string/add_patient" />
        </LinearLayout>

        <!-- Apply the border drawable as background -->

    </LinearLayout>
</FrameLayout>